--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "filesize": "^3.3.0",
+    "fixed-data-table": "^0.6.3",
     "moment": "^2.16.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
